dev/non_executable_reasons_record_from_random_10k/6415.txt
3.6
An error occurred while executing the following cell:
------------------
#doesn't work because sting doesn't use newline and r'\n' looks for newline

re.search(r'\n',  r'\n\n') `   #r


------------------

[0;36m  File [0;32m"<ipython-input-7-ab72facb9e07>"[0;36m, line [0;32m3[0m
[0;31m    re.search(r'\n',  r'\n\n') `   #r[0m
[0m                               ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-7-ab72facb9e07>, line 3)

Executability                            : False
